--- a/index.html
+++ b/index.html
@@ -6,9 +6,93 @@
         <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <link rel="stylesheet" href="css/leaflet.css"><link rel="stylesheet" href="css/L.Control.Locate.min.css">
-        <link rel="stylesheet" href="css/qgis2web.css"><link rel="stylesheet" href="css/fontawesome-all.min.css">
-        <link rel="stylesheet" href="css/leaflet-measure.css">
+        <link rel="stylesheet" href="./resources/ol.css">
+        <link rel="stylesheet" href="resources/fontawesome-all.min.css">
+        <link rel="stylesheet" href="./resources/ol-layerswitcher.css">
+        <link rel="stylesheet" href="./resources/qgis2web.css">
+<style>
+.search-layer {
+  top: 135px;
+  left: .5em;
+}
+.ol-touch .search-layer {
+  top: 180px;
+}
+</style>
+        <style>
+        html, body {
+            background-color: #ffffff;
+        }
+        .ol-control button {
+            background-color: #f8f8f8 !important;
+            color: #000000 !important;
+            border-radius: 0px !important;
+        }
+        .ol-zoom, .geolocate, .gcd-gl-control .ol-control {
+            background-color: rgba(255,255,255,.4) !important;
+            padding: 3px !important;
+        }
+        .ol-scale-line {
+            background: none !important;
+        }
+        .ol-scale-line-inner {
+            border: 2px solid #f8f8f8 !important;
+            border-top: none !important;
+            background: rgba(255, 255, 255, 0.5) !important;
+            color: black !important;
+        }
+        </style>
+
+        <style>
+        .geolocate {
+            top: 65px;
+            left: .5em;
+        }
+        .ol-touch .geolocate {
+            top: 80px;
+        }
+        </style>
+<style>
+.tooltip {
+  position: relative;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 4px;
+  color: white;
+  padding: 4px 8px;
+  opacity: 0.7;
+  white-space: nowrap;
+}
+.tooltip-measure {
+  opacity: 1;
+  font-weight: bold;
+}
+.tooltip-static {
+  background-color: #ffcc33;
+  color: black;
+  border: 1px solid white;
+}
+.tooltip-measure:before,
+.tooltip-static:before {
+  border-top: 6px solid rgba(0, 0, 0, 0.5);
+  border-right: 6px solid transparent;
+  border-left: 6px solid transparent;
+  content: "";
+  position: absolute;
+  bottom: -6px;
+  margin-left: -7px;
+  left: 50%;
+}
+.tooltip-static:before {
+  border-top-color: #ffcc33;
+}
+.measure-control {
+  top: 100px;
+  left: .5em;
+}
+.ol-touch .measure-control {
+  top: 130px;
+}
+</style>
         <style>
         html, body, #map {
             width: 100%;
@@ -21,125 +105,20 @@
     </head>
     <body>
         <div id="map">
+            <div id="popup" class="ol-popup">
+                <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+                <div id="popup-content"></div>
+            </div>
         </div>
-        <script src="js/qgis2web_expressions.js"></script>
-        <script src="js/leaflet.js"></script><script src="js/L.Control.Locate.min.js"></script>
-        <script src="js/leaflet.rotatedMarker.js"></script>
-        <script src="js/leaflet.pattern.js"></script>
-        <script src="js/leaflet-hash.js"></script>
-        <script src="js/Autolinker.min.js"></script>
-        <script src="js/rbush.min.js"></script>
-        <script src="js/labelgun.min.js"></script>
-        <script src="js/labels.js"></script>
-        <script src="js/leaflet.wms.js"></script>
-        <script src="js/leaflet-measure.js"></script>
-        <script>
-        var map = L.map('map', {
-            zoomControl:true, maxZoom:28, minZoom:1
-        }).fitBounds([[10.691902899742127,-87.4305370137498],[14.846826767921476,-82.79969522501968]]);
-        var hash = new L.Hash(map);
-        map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
-        var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
-        L.control.locate({locateOptions: {maxZoom: 19}}).addTo(map);
-        var measureControl = new L.Control.Measure({
-            position: 'topleft',
-            primaryLengthUnit: 'meters',
-            secondaryLengthUnit: 'kilometers',
-            primaryAreaUnit: 'sqmeters',
-            secondaryAreaUnit: 'hectares'
-        });
-        measureControl.addTo(map);
-        document.getElementsByClassName('leaflet-control-measure-toggle')[0]
-        .innerHTML = '';
-        document.getElementsByClassName('leaflet-control-measure-toggle')[0]
-        .className += ' fas fa-ruler';
-        var bounds_group = new L.featureGroup([]);
-        function setBounds() {
-            map.setMaxBounds(map.getBounds());
-        }
-        map.createPane('pane_ESRIStandard_0');
-        map.getPane('pane_ESRIStandard_0').style.zIndex = 400;
-        var layer_ESRIStandard_0 = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Street_Map/MapServer/tile/{z}/{y}/{x}', {
-            pane: 'pane_ESRIStandard_0',
-            opacity: 1.0,
-            attribution: '',
-            minZoom: 1,
-            maxZoom: 28,
-            minNativeZoom: 0,
-            maxNativeZoom: 20
-        });
-        layer_ESRIStandard_0;
-        map.addLayer(layer_ESRIStandard_0);
-        map.createPane('pane_Lluviaacumuladaltimas72hrs_1');
-        map.getPane('pane_Lluviaacumuladaltimas72hrs_1').style.zIndex = 401;
-        var layer_Lluviaacumuladaltimas72hrs_1 = L.WMS.layer("http://mapserveride.ineter.gob.ni/geoserver/wsINETER-DGMT/wms", "Lluvia_72hrs", {
-            pane: 'pane_Lluviaacumuladaltimas72hrs_1',
-            format: 'image/png',
-            uppercase: true,
-            transparent: true,
-            continuousWorld : true,
-            tiled: true,
-            info_format: 'text/html',
-            opacity: 1,
-            identify: false,
-            attribution: '',
-        });
-        map.createPane('pane_Lluviaacumuladaltimas48hrs_2');
-        map.getPane('pane_Lluviaacumuladaltimas48hrs_2').style.zIndex = 402;
-        var layer_Lluviaacumuladaltimas48hrs_2 = L.WMS.layer("http://mapserveride.ineter.gob.ni/geoserver/wsINETER-DGMT/wms", "Lluvia_48hrs", {
-            pane: 'pane_Lluviaacumuladaltimas48hrs_2',
-            format: 'image/png',
-            uppercase: true,
-            transparent: true,
-            continuousWorld : true,
-            tiled: true,
-            info_format: 'text/html',
-            opacity: 1,
-            attribution: '',
-        });
-        map.createPane('pane_Lluviaacumuladaltimas24hrs_3');
-        map.getPane('pane_Lluviaacumuladaltimas24hrs_3').style.zIndex = 403;
-        var layer_Lluviaacumuladaltimas24hrs_3 = L.WMS.layer("http://mapserveride.ineter.gob.ni/geoserver/wsINETER-DGMT/wms", "Lluvia_24hrs", {
-            pane: 'pane_Lluviaacumuladaltimas24hrs_3',
-            format: 'image/png',
-            uppercase: true,
-            transparent: true,
-            continuousWorld : true,
-            tiled: true,
-            info_format: 'text/html',
-            opacity: 1,
-            attribution: '',
-        });
-        map.createPane('pane_Lluviaacumuladaltimas12hrs_4');
-        map.getPane('pane_Lluviaacumuladaltimas12hrs_4').style.zIndex = 404;
-        var layer_Lluviaacumuladaltimas12hrs_4 = L.WMS.layer("http://mapserveride.ineter.gob.ni/geoserver/wsINETER-DGMT/wms", "Lluvia_12hrs", {
-            pane: 'pane_Lluviaacumuladaltimas12hrs_4',
-            format: 'image/png',
-            uppercase: true,
-            transparent: true,
-            continuousWorld : true,
-            tiled: true,
-            info_format: 'text/html',
-            opacity: 1,
-            attribution: '',
-        });
-        map.createPane('pane_Lluviaacumuladaltimas3hrs_5');
-        map.getPane('pane_Lluviaacumuladaltimas3hrs_5').style.zIndex = 405;
-        var layer_Lluviaacumuladaltimas3hrs_5 = L.WMS.layer("http://mapserveride.ineter.gob.ni/geoserver/wsINETER-DGMT/wms", "Lluvia_3hrs", {
-            pane: 'pane_Lluviaacumuladaltimas3hrs_5',
-            format: 'image/png',
-            uppercase: true,
-            transparent: true,
-            continuousWorld : true,
-            tiled: true,
-            info_format: 'text/html',
-            opacity: 1,
-            attribution: '',
-        });
-        map.addLayer(layer_Lluviaacumuladaltimas3hrs_5);
-        var baseMaps = {};
-        L.control.layers(baseMaps,{"Lluvia acumulada últimas 3hrs": layer_Lluviaacumuladaltimas3hrs_5,"Lluvia acumulada últimas 12hrs": layer_Lluviaacumuladaltimas12hrs_4,"Lluvia acumulada últimas 24hrs": layer_Lluviaacumuladaltimas24hrs_3,"Lluvia acumulada últimas 48hrs": layer_Lluviaacumuladaltimas48hrs_2,"Lluvia acumulada últimas 72hrs": layer_Lluviaacumuladaltimas72hrs_1,"ESRI Standard": layer_ESRIStandard_0,}).addTo(map);
-        setBounds();
-        </script>
+        <script src="resources/qgis2web_expressions.js"></script>
+        <script src="resources/polyfills.js"></script>
+        <script src="./resources/functions.js"></script>
+        <script src="./resources/ol.js"></script>
+        <script src="./resources/ol-layerswitcher.js"></script>
+        <script src="layers/OPAs2020_2.js"></script>
+        <script src="styles/OPAs2020_2_style.js"></script>
+        <script src="./layers/layers.js" type="text/javascript"></script> 
+        <script src="./resources/Autolinker.min.js"></script>
+        <script src="./resources/qgis2web.js"></script>
     </body>
 </html>
