--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
         .ol-control button {
             background-color: #f8f8f8 !important;
-            color: #000000 !important;
+            color: #1f78b4 !important;
             border-radius: 0px !important;
         }
         .ol-zoom, .geolocate, .gcd-gl-control .ol-control {
@@ -115,8 +115,8 @@
         <script src="./resources/functions.js"></script>
         <script src="./resources/ol.js"></script>
         <script src="./resources/ol-layerswitcher.js"></script>
-        <script src="layers/OPAs2020_2.js"></script>
-        <script src="styles/OPAs2020_2_style.js"></script>
+        <script src="layers/OPAs2020_6.js"></script>
+        <script src="styles/OPAs2020_6_style.js"></script>
         <script src="./layers/layers.js" type="text/javascript"></script> 
         <script src="./resources/Autolinker.min.js"></script>
         <script src="./resources/qgis2web.js"></script>
